--- a/client/src/features/general/about.css
+++ b/client/src/features/general/about.css
@@ -1,5 +1,6 @@
 .infoContainer {
     text-align: center;
+    padding-top: 90px;
 }
 
 .infoHeader {
