--- a/client/src/features/general/navbar.css
+++ b/client/src/features/general/navbar.css
@@ -3,6 +3,10 @@
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
+    z-index: 2;
+    background-color: inherit;
+    position: fixed;
+    width: 100%;
 }
 
 .logoContainer {
