--- a/client/src/features/user/userForms.css
+++ b/client/src/features/user/userForms.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 90px;
 }
 
 .userInputField {
@@ -65,6 +66,10 @@
 
 .formLink:hover {
     font-weight: bold;
+}
+
+.userInfoContainer {
+    padding-top: 90px;
 }
 
 .userInfoContainer, .userDeleteContainer {
